--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,14 +16,84 @@ const { title } = Astro.props
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <slot />
+
+  <body
+    class='h-screen p-2 grid grid-cols-1 grid-rows-[1fr_auto] gap-2 md:grid-cols-[350px_1fr]'
+  >
+    <aside
+      class='hidden bg-[#121212] [grid-area:aside] rounded-lg md:inline-block'
+    >
+    </aside>
+
+    <!-- linear-gradient(rgba(0,0,0,.6) 0,var(--background-base) 100%),var(--background-noise) -->
+    <main class='bg-[#121212] [grid-area:main] rounded-lg'>
+      <slot />
+    </main>
+
+    <footer class='h-16 bg-[#000] [grid-area:footer] md:h-20'></footer>
   </body>
 </html>
+
+<style>
+  body {
+    grid-template-areas:
+      'main'
+      'footer';
+  }
+
+  @media (width > 768px) {
+    body {
+      grid-template-areas:
+        'aside main'
+        'footer footer';
+    }
+  }
+</style>
+
 <style is:global>
   html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
+    font-family: 'CircularStd', system-ui, sans-serif;
+    background: #000;
+    color: white;
+  }
+
+  @font-face {
+    font-family: 'CircularStd';
+    src: url('/fonts/CircularStd-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CircularStd';
+    src: url('/fonts/CircularStd-Book.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CircularStd';
+    src: url('/fonts/CircularStd-Light.woff2') format('woff2');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CircularStd';
+    src: url('/fonts/CircularStd-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+
+  @font-face {
+    font-family: 'CircularStd';
+    src: url('/fonts/CircularStd-Black.woff2') format('woff2');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
   }
 </style>
