--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Aside from '@/components/Aside.astro'
+
 interface Props {
   title: string
 }
@@ -21,8 +23,9 @@ const { title } = Astro.props
     class='h-screen p-2 grid grid-cols-1 grid-rows-[1fr_auto] gap-2 md:grid-cols-[350px_1fr]'
   >
     <aside
-      class='hidden bg-[#121212] [grid-area:aside] rounded-lg md:inline-block'
+      class='hidden bg-[#000] [grid-area:aside] rounded-lg md:inline-block'
     >
+      <Aside />
     </aside>
 
     <!-- linear-gradient(rgba(0,0,0,.6) 0,var(--background-base) 100%),var(--background-noise) -->
@@ -54,7 +57,7 @@ const { title } = Astro.props
   html {
     font-family: 'CircularStd', system-ui, sans-serif;
     background: #000;
-    color: white;
+    color: #fff;
   }
 
   @font-face {
