--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props
       <slot />
     </main>
 
-    <footer class='h-16 bg-[#000] [grid-area:player] md:h-20'></footer>
+    <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'></footer>
   </body>
 </html>
 
