--- a/src/components/Main/PlaylistCard.astro
+++ b/src/components/Main/PlaylistCard.astro
@@ -1,5 +1,6 @@
 ---
 import { type Playlist } from '@/lib/data'
+import { Play } from '@/icons/Play'
 
 interface Props {
   playlist: Playlist
@@ -11,8 +12,20 @@ const artistsName = artists.join(', ')
 ---
 
 <div class='p-3 rounded-md hover:bg-[#1a1a1a]'>
-  <a href='#' class='flex flex-col gap-2'>
-    <img src={cover} alt={title} class='w-[10.25rem] h-[10.25rem] rounded-md' />
+  <a href='#' class='flex flex-col gap-2 group'>
+    <div class='relative'>
+      <img
+        src={cover}
+        alt={title}
+        class='w-[10.25rem] h-[10.25rem] rounded-md'
+      />
+
+      <button
+        class='absolute bottom-2 right-2 w-12 h-12 bg-green-500 text-black rounded-full [&_svg]:mx-auto opacity-0 transition-all translate-y-2 duration-200 hover:bg-[#1fdf64] hover:scale-105 group-hover:opacity-100 group-hover:translate-y-0'
+      >
+        <Play />
+      </button>
+    </div>
 
     <div>
       <h3>{title}</h3>
