--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Aside from '@/components/Aside/Aside.astro'
+import Footer from '@/components/Player/Footer.astro'
 
 interface Props {
   title: string
@@ -33,7 +34,9 @@ const { title } = Astro.props
       <slot />
     </main>
 
-    <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'></footer>
+    <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'>
+      <Footer />
+    </footer>
   </body>
 </html>
 
