--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,11 +1,13 @@
 ---
+import CurrentSong from './CurrentSong.astro'
 import Player from './Player.tsx'
+import Volume from './Volume'
 ---
 
-<div class='h-full grid grid-cols-[30%_40%_30%] items-center'>
-  <div>Current Song</div>
+<div class='h-full px-2 grid grid-cols-[30%_40%_30%] items-center'>
+  <CurrentSong />
 
   <Player client:load />
 
-  <div class='justify-self-end'>Volume</div>
+  <Volume client:load />
 </div>
