--- a/src/components/Main/Main.astro
+++ b/src/components/Main/Main.astro
@@ -24,6 +24,8 @@ const greetingsMessage =
 <div>
   <header class='px-5 py-4 flex gap-2'>
     <button
+      type='button'
+      aria-label='Go Back'
       disabled
       class='w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
     >
@@ -31,6 +33,8 @@ const greetingsMessage =
     </button>
 
     <button
+      type='button'
+      aria-label='Go Forward'
       class='w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
     >
       <Forward />
