Add transition name and transition persist to footer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props
     </main>
 
     <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'>
-      <Footer />
+      <Footer transition:name='media-player' transition:persist />
     </footer>
   </body>
 </html>
