--- a/src/components/Aside/AsidePlaylists.astro
+++ b/src/components/Aside/AsidePlaylists.astro
@@ -10,7 +10,7 @@ const { id, albumId, title, color, cover, artists } = playlist
 const artistsName = artists.join(', ')
 ---
 
-<a href='#' class='p-3 flex items-center gap-3'>
+<a href={`/playlist/${id}`} class='p-3 flex items-center gap-3'>
   <img src={cover} alt={title} class='w-12 h-12 rounded-sm' />
 
   <div>
