--- a/src/components/Aside/AsideNav.astro
+++ b/src/components/Aside/AsideNav.astro
@@ -6,7 +6,7 @@ import Search from '@/icons/Search.astro'
 <nav class='h-28 bg-[#121212] px-3 py-2 font-bold rounded-lg'>
   <ul class='h-full'>
     <li class='h-1/2 p-3'>
-      <a href='#' class='flex items-center gap-5 opacity-50 hover:opacity-100'>
+      <a href='/' class='flex items-center gap-5 opacity-50 hover:opacity-100'>
         <Home />
         <span>Home</span>
       </a>
