--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import ViewTransitions from 'astro/components/ViewTransitions.astro'
 import Aside from '@/components/Aside/Aside.astro'
 import Footer from '@/components/Footer/Footer.astro'
 
@@ -18,6 +19,7 @@ const { title } = Astro.props
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
+    <ViewTransitions />
   </head>
 
   <body
@@ -29,7 +31,6 @@ const { title } = Astro.props
       <Aside />
     </aside>
 
-    <!-- linear-gradient(rgba(0,0,0,.6) 0,var(--background-base) 100%),var(--background-noise) -->
     <main class='bg-[#121212] [grid-area:main] rounded-lg'>
       <slot />
     </main>
@@ -37,69 +38,69 @@ const { title } = Astro.props
     <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'>
       <Footer transition:name='media-player' transition:persist />
     </footer>
+
+    <style>
+      body {
+        grid-template-areas:
+          'main'
+          'player';
+      }
+
+      @media (width > 768px) {
+        body {
+          grid-template-areas:
+            'aside main'
+            'player player';
+        }
+      }
+    </style>
+
+    <style is:global>
+      html {
+        font-family: 'CircularStd', system-ui, sans-serif;
+        background: #000;
+        color: #fff;
+      }
+
+      @font-face {
+        font-family: 'CircularStd';
+        src: url('/fonts/CircularStd-Medium.woff2') format('woff2');
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'CircularStd';
+        src: url('/fonts/CircularStd-Book.woff2') format('woff2');
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'CircularStd';
+        src: url('/fonts/CircularStd-Light.woff2') format('woff2');
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'CircularStd';
+        src: url('/fonts/CircularStd-Bold.woff2') format('woff2');
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: 'CircularStd';
+        src: url('/fonts/CircularStd-Black.woff2') format('woff2');
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
   </body>
 </html>
-
-<style>
-  body {
-    grid-template-areas:
-      'main'
-      'player';
-  }
-
-  @media (width > 768px) {
-    body {
-      grid-template-areas:
-        'aside main'
-        'player player';
-    }
-  }
-</style>
-
-<style is:global>
-  html {
-    font-family: 'CircularStd', system-ui, sans-serif;
-    background: #000;
-    color: #fff;
-  }
-
-  @font-face {
-    font-family: 'CircularStd';
-    src: url('/fonts/CircularStd-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'CircularStd';
-    src: url('/fonts/CircularStd-Book.woff2') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'CircularStd';
-    src: url('/fonts/CircularStd-Light.woff2') format('woff2');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'CircularStd';
-    src: url('/fonts/CircularStd-Bold.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'CircularStd';
-    src: url('/fonts/CircularStd-Black.woff2') format('woff2');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-  }
-</style>
