--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import ViewTransitions from 'astro/components/ViewTransitions.astro'
 import Aside from '@/components/Aside/Aside.astro'
-import Footer from '@/components/Footer/Footer.astro'
+import Footer from '@/components/Footer/Footer'
 
 interface Props {
   title: string
@@ -35,9 +35,7 @@ const { title } = Astro.props
       <slot />
     </main>
 
-    <footer class='h-16 bg-[#000] [grid-area:player] md:h-[4.5rem]'>
-      <Footer transition:name='media-player' transition:persist />
-    </footer>
+    <Footer client:load transition:name='media-player' transition:persist />
 
     <style>
       body {
