--- a/src/components/Aside/AsideLibrary.astro
+++ b/src/components/Aside/AsideLibrary.astro
@@ -4,7 +4,7 @@ import { playlists } from '@/lib/data'
 import AsidePlaylists from './AsidePlaylists.astro'
 ---
 
-<div class='h-full bg-[#121212] px-3 py-2 rounded-lg'>
+<div class='bg-[#121212] px-3 py-2 rounded-lg'>
   <a
     href='#'
     class='p-3 flex items-center gap-5 font-bold opacity-50 hover:opacity-100'
