--- a/src/components/Aside/AsidePlaylists.astro
+++ b/src/components/Aside/AsidePlaylists.astro
@@ -6,7 +6,7 @@ interface Props {
 }
 
 const { playlist } = Astro.props
-const { id, albumId, title, color, cover, artists } = playlist
+const { id, title, cover, artists } = playlist
 const artistsName = artists.join(', ')
 ---
 
