Rename Main component and add SmallPlaylistCard component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Main from '@/components/Main/Main.astro'
+import MainPage from '@/components/Main/MainPage.astro'
 ---
 
 <Layout title='Home | Spotify Clone'>
-  <Main />
+  <MainPage />
 </Layout>
