--- a/src/components/Main/SmallPlaylistCard.astro
+++ b/src/components/Main/SmallPlaylistCard.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from 'astro:assets'
+import SmallCardButton from './SmallCardButton'
+
 interface Props {
   id: string
   title: string
@@ -9,9 +12,18 @@ const { id, title, cover } = Astro.props
 ---
 
 <article class='h-12 rounded-md bg-[#242424] hover:bg-[#2a2a2a]'>
-  <a href={`/playlist/${id}`} class='flex items-center gap-2 group'>
-    <img src={cover} alt={title} class='w-12 h-12 rounded-l-md' />
+  <a href={`/playlist/${id}`} class='pr-2 flex items-center gap-2 group'>
+    <Image
+      src={cover}
+      alt={title}
+      width={48}
+      height={48}
+      loading={'eager'}
+      class='rounded-l-md'
+    />
 
-    <h3>{title}</h3>
+    <h3 class='flex-1'>{title}</h3>
+
+    <SmallCardButton playlistId={id} client:visible />
   </a>
 </article>
