--- a/src/components/Aside/AsidePlaylists.astro
+++ b/src/components/Aside/AsidePlaylists.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets'
 import { type Playlist } from '@/lib/data'
 
 interface Props {
@@ -11,7 +12,14 @@ const artistsName = artists.join(', ')
 ---
 
 <a href={`/playlist/${id}`} class='p-3 flex items-center gap-3'>
-  <img src={cover} alt={title} class='w-12 h-12 rounded-sm' />
+  <Image
+    src={cover}
+    alt={title}
+    width={48}
+    height={48}
+    loading={'eager'}
+    class='rounded-sm'
+  />
 
   <div>
     <h3>{title}</h3>
