--- a/src/components/Main/PlaylistCard.astro
+++ b/src/components/Main/PlaylistCard.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets'
 import CardButton from './CardButton'
 
 interface Props {
@@ -15,10 +16,13 @@ const artistsName = artists.join(', ')
 <article class='p-3 rounded-md hover:bg-[#1a1a1a]'>
   <a href={`/playlist/${id}`} class='flex flex-col gap-2 group'>
     <div class='relative'>
-      <img
+      <Image
         src={cover}
         alt={title}
-        class='w-[10.25rem] h-[10.25rem] rounded-md'
+        width={164}
+        height={164}
+        loading={'eager'}
+        class='rounded-md'
       />
 
       <CardButton playlistId={id} client:visible />
