Fix accessibility issues

--- a/src/components/Aside/AsideLibrary.astro
+++ b/src/components/Aside/AsideLibrary.astro
@@ -5,14 +5,13 @@ import AsidePlaylists from './AsidePlaylists.astro'
 ---
 
 <div class='bg-[#121212] px-3 py-2 rounded-lg'>
-  <a
-    href='#'
-    class='p-3 flex items-center gap-5 font-bold opacity-50 hover:opacity-100'
+  <div
+    class='p-3 flex items-center gap-5 font-bold cursor-pointer opacity-50 hover:opacity-100'
   >
     <Library />
 
     <span>Your Library</span>
-  </a>
+  </div>
 
   <div>
     <ul>
