--- a/src/components/Aside/AsideNav.astro
+++ b/src/components/Aside/AsideNav.astro
@@ -12,11 +12,11 @@ import Search from '@/icons/Search.astro'
       </a>
     </li>
 
-    <li class='h-1/2 p-3'>
-      <a href='#' class='flex items-center gap-5 opacity-50 hover:opacity-100'>
-        <Search />
-        <span>Search</span>
-      </a>
+    <li
+      class='h-1/2 p-3 flex items-center gap-5 cursor-pointer opacity-50 hover:opacity-100'
+    >
+      <Search />
+      <span>Search</span>
     </li>
   </ul>
 </nav>
