--- a/src/components/Main/PlaylistCard.astro
+++ b/src/components/Main/PlaylistCard.astro
@@ -13,7 +13,9 @@ const { id, title, cover, artists } = Astro.props
 const artistsName = artists.join(', ')
 ---
 
-<article class='p-3 rounded-md hover:bg-[#1a1a1a]'>
+<article
+  class='w-[9.5rem] p-2 rounded-md hover:bg-[#1a1a1a] md:w-[11.25rem] md:p-3'
+>
   <a href={`/playlist/${id}`} class='flex flex-col gap-2 group'>
     <div class='relative'>
       <Image
