--- a/src/components/Aside/AsidePlaylists.astro
+++ b/src/components/Aside/AsidePlaylists.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from 'astro:assets'
 import AsidePlaylistTitle from './AsidePlaylistTitle'
 
 interface Props {
@@ -14,12 +13,12 @@ const artistsName = artists.join(', ')
 ---
 
 <a href={`/playlist/${id}`} class='p-3 flex items-center gap-3'>
-  <Image
+  <img
     src={cover}
     alt={title}
     width={48}
     height={48}
-    loading={'eager'}
+    loading='eager'
     class='rounded-sm'
   />
 
