Reponsive design to main page

--- a/src/components/Aside/Aside.astro
+++ b/src/components/Aside/Aside.astro
@@ -4,7 +4,7 @@ import AsideLibrary from './AsideLibrary.astro'
 ---
 
 <aside
-  class='hidden [grid-area:aside] bg-[#000] rounded-lg md:grid md:grid-rows-[auto_1fr] md:gap-2'
+  class='hidden [grid-area:aside] bg-[#000] rounded-lg lg:grid lg:grid-rows-[auto_1fr] lg:gap-2'
 >
   <AsideNav />
 
