--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const { title } = Astro.props
   </head>
 
   <body
-    class='h-screen p-2 grid grid-cols-1 grid-rows-[1fr_auto] gap-2 md:grid-cols-[350px_1fr]'
+    class='h-screen p-2 grid grid-cols-1 grid-rows-[1fr_auto] gap-2 lg:grid-cols-[minmax(280px,350px)_1fr]'
   >
     <Aside />
 
@@ -40,7 +40,7 @@ const { title } = Astro.props
           'player';
       }
 
-      @media (width > 768px) {
+      @media (min-width: 1024px) {
         body {
           grid-template-areas:
             'aside main'
