--- a/src/components/Main/MainPage.astro
+++ b/src/components/Main/MainPage.astro
@@ -26,15 +26,14 @@ const greetingsMessage =
   id='mainPageContainer'
   class='max-h-[calc(100vh-5.5rem)] rounded-lg overflow-y-scroll md:max-h-[calc(100vh-6.5rem)]'
 >
-  <header class='px-5 py-4 flex gap-2'>
-    <button
-      type='button'
-      aria-label='Go Back'
-      disabled
-      class='w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
+  <header class='hidden px-5 py-4 md:flex md:gap-2'>
+    <a
+      href='/'
+      aria-label='Go main page'
+      class='w-8 h-8 bg-black/70 rounded-full [&_svg]:h-full [&_svg]:mx-auto'
     >
       <Back />
-    </button>
+    </a>
 
     <button
       type='button'
@@ -45,7 +44,7 @@ const greetingsMessage =
     </button>
   </header>
 
-  <h2 class='mb-2 px-5 text-2xl font-bold'>{greetingsMessage}</h2>
+  <h2 class='mt-4 mb-2 px-5 text-2xl font-bold md:mt-0'>{greetingsMessage}</h2>
 
   <div
     class='px-5 py-2 grid grid-cols-2 grid-rows-3 gap-2 lg:grid-cols-3 lg:grid-rows-2'
