Add SongItem component to play song when clicked

--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -4,6 +4,7 @@ import { playlists, songs } from '@/lib/data'
 import Back from '@/icons/Back.astro'
 import Forward from '@/icons/Forward.astro'
 import PlaylistPlayButton from '@/components/Playlist/PlaylistPlayButton'
+import SongItem from '@/components/Playlist/SongItem'
 
 const { id } = Astro.params
 
@@ -23,32 +24,32 @@ const bgGradient = {
   >
     <section class='px-5' style={bgGradient}>
       <header class='py-4 flex gap-2'>
-        <button
-          type='button'
-          aria-label='Go Back'
-          class='w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
+        <a
+          href='/'
+          aria-label='Go to main page'
+          class='w-8 h-8 bg-black/70 rounded-full [&_svg]:h-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
         >
           <Back />
-        </button>
+        </a>
 
         <button
           type='button'
           aria-label='Go Forward'
           disabled
-          class='w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed'
+          class='hidden w-8 h-8 bg-black/70 rounded-full [&_svg]:mx-auto disabled:opacity-50 disabled:cursor-not-allowed lg:inline-block'
         >
           <Forward />
         </button>
       </header>
 
-      <div class='px-1 flex items-center gap-4'>
+      <div class='px-1 flex flex-col items-center gap-4 md:flex-row'>
         <picture
           class='w-[14.5rem] h-[14.5rem] rounded-sm shadow-[0_4px_60px_rgba(0,0,0,.5)]'
         >
           <img src={playlist?.cover} alt={playlist?.title} class='rounded-sm' />
         </picture>
 
-        <h1 class='text-6xl font-bold'>{playlist?.title}</h1>
+        <h1 class='text-3xl font-bold md:text-6xl'>{playlist?.title}</h1>
       </div>
     </section>
 
@@ -56,9 +57,9 @@ const bgGradient = {
       <PlaylistPlayButton playlistId={playlist?.id} client:visible />
     </div>
 
-    <section class='mt-3 px-5'>
+    <section class='mt-3 px-1 md:px-5'>
       <header
-        class='px-4 grid grid-cols-[1rem_minmax(120px,4fr)_minmax(120px,3fr)_minmax(120px,3fr)] gap-4 text-sm text-white/50 border-b border-white/10'
+        class='hidden px-4 text-sm text-white/50 border-b border-white/10 md:grid md:grid-cols-[1rem_minmax(120px,4fr)_minmax(120px,3fr)_minmax(120px,3fr)] md:gap-4'
       >
         <span>#</span>
         <span>Title</span>
@@ -70,28 +71,12 @@ const bgGradient = {
         {
           playlistSongs.map((song, index) => {
             return (
-              <li class='py-2 px-4 grid grid-cols-[1rem_minmax(120px,4fr)_minmax(120px,3fr)_minmax(120px,3fr)] items-center gap-4 rounded-md hover:bg-[#1a1a1a]'>
-                <span class='opacity-50'>{index + 1}</span>
-
-                <div class='flex items-center gap-3'>
-                  <img
-                    src={song.image}
-                    alt={song.title}
-                    class='w-10 h-10 rounded-sm'
-                  />
-
-                  <div>
-                    <h3>{song.title}</h3>
-                    <span class='text-sm opacity-50'>
-                      {song.artists.join(', ')}
-                    </span>
-                  </div>
-                </div>
-
-                <span class='opacity-50'>{playlist?.title}</span>
-
-                <span class='opacity-50'>{song.duration}</span>
-              </li>
+              <SongItem
+                song={song}
+                playlistId={Number(playlist?.id)}
+                index={index}
+                client:visible
+              />
             )
           })
         }
