Fix max width of main page and playlist page

--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -20,7 +20,7 @@ const bgGradient = {
 <Layout title=`${playlist?.title} | Spotify Playlist`>
   <div
     id='playlistContainer'
-    class='max-h-[calc(100vh-6rem)] rounded-lg overflow-y-scroll'
+    class='max-h-[calc(100dvh-5.5rem)] rounded-lg overflow-y-scroll md:max-h-[calc(100dvh-6.5rem)]'
   >
     <section class='px-5' style={bgGradient}>
       <header class='py-4 flex gap-2'>
