--- a/src/components/Main/MainPage.astro
+++ b/src/components/Main/MainPage.astro
@@ -24,7 +24,7 @@ const greetingsMessage =
 
 <div
   id='mainPageContainer'
-  class='max-h-[calc(100vh-5.5rem)] rounded-lg overflow-y-scroll md:max-h-[calc(100vh-6.5rem)]'
+  class='max-h-[calc(100dvh-5.5rem)] rounded-lg overflow-y-scroll md:max-h-[calc(100dvh-6.5rem)]'
 >
   <header class='hidden px-5 py-4 md:flex md:gap-2'>
     <a
